# python-application-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd-build-push.yaml  ci-code-quality.yaml
python_application_template/: __init__.py  main.py
requirements/: requirements-dev.txt  requirements.txt
src/python_application_template/: __init__.py
tests/: main_test.py  smoke_test.py
